			ROX-Session
			A very simple session manager
			by Thomas Leonard

01-Nov-2003
~~~~~~~~~~~
Updated Dutch translation. (Jan Wagemakers)

26-Oct-2003
~~~~~~~~~~~
Use apsymbols.h (from autopackage.org) if possible for binary compatibility
with older glibc versions. Use g_ascii_* functions instead of the ctypes ones
for the same reason.

12-Oct-2003 (Release 0.1.21)
~~~~~~~~~~~
Run ROX-Filer via Zero Install, if possible. Also, try to get the MIME database
that way.

05-Oct-2003
~~~~~~~~~~~
Added Spanish translation (Marcelo Ramos).

26-Aug-2003
~~~~~~~~~~~
Added option to set when to switch to log window mode.
Bugfix: Reverting the theme caused a crash.

21-Jul-2003
~~~~~~~~~~~
Updated italian translation, added italian guide (Yuri Bongiorno)

04-Jul-2003
~~~~~~~~~~~
Updated italian translation: AppInfo.xml, Help/Guide/AppInfo.xml
and src/po/it.po (Yuri Bongiorno)

19-Jun-2003 (Release 0.1.20)
~~~~~~~~~~~
Make Ctrl-U work again (GTK+-2 broke it).

18-Jun-2003
~~~~~~~~~~~
Added Italian translation: Help/Guide/AppInfo.xml (Yuri Bongiorno).

14-Jun-2003
~~~~~~~~~~~
Added Italian translations: src/po/it.po, AppInfo.xml (Yuri Bongiorno).

07-Jun-2003
~~~~~~~~~~~
Window manager list now only shows installed window managers (Richard Boulton).

15-May-2003
~~~~~~~~~~~
Added Japanese translation (UTUMI Hirosi).

25-Apr-2003
~~~~~~~~~~~
Close stdout when running child processes for users running startx from the
console, since some terminal applications try to read from the console,
freezing X (Keith R. John Warno).

17-Apr-2003
~~~~~~~~~~~
Added note in RunROX explaining the need for -n (suggested by Keith R. John
Warno).

17-Apr-2003 (Release 0.1.19)
~~~~~~~~~~~
Update logging code to handle GTK+-2.2 (so ROX-Session doesn't try to log
its own errors and deadlock).
Only show themes with a gtk-2.0 subdirectory.

16-Apr-2003
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

12-Apr-2003
~~~~~~~~~~~
GTK theme option is now a menu of possible choices.

05-Mar-2003