@@ -37,5 +37,8 @@
       <Label xml:lang='es'>Iniciar Autom&#x00E1;ticamente...</Label>
       <Label xml:lang='it'>Esecuzione automatica...</Label>
     </Item>
+    <Item option='-m'>
+      <Label xml:lang="en">Message Log...</Label>
+    </Item>
   </AppMenu>
 </AppInfo>
