@@ -2,6 +2,10 @@
 			A very simple session manager
 			by Thomas Leonard
 
+10-Nov-2003
+~~~~~~~~~~~
+Added AppMenu item to get quick access to the message log (Stephen Watson).
+
 01-Nov-2003
 ~~~~~~~~~~~
 Updated Dutch translation. (Jan Wagemakers)
